# gmail-search-chatbot

./: .env.example  .gitignore  README.md  guidance.txt  pyproject.toml
discussions/: Oauth_desktop_token_flow_from_google_chat.md  Steps_to_add_OAuth_Desktop_flow.md
scripts/: ingest_mailbox.py
src/database/: config.py  health_check.py
src/gmail/: gmail_email_read_service.py  gmail_email_repository.py  gmail_email_service.py  gmail_oauth2_service.py
src/gmail/models/: email_record.py
src/gmail_chat/: __init__.py  app.py  chains.py  config.py  gmail_client.py  ingestion.py  vector_store.py
src/gmail_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py
tests/database/: test_config.py  test_health_check.py
tests/gmail/: test_gmail_email_read_service.py  test_gmail_email_repository.py  test_gmail_oauth2_service.py
